# xslam-stereo

./: CMakeLists.txt  README.md
app/: run_kitti_vo.cpp
cmake/: packages.cmake
src/: CMakeLists.txt
src/common/: AccumulateAverage.h  CVYamlParse.h  DataBase.h  DataKitti.h  PrintDebug.cpp  PrintDebug.h  Timer.h  Visualizer.h  YamlConfig.h
src/image/: ImageProcess.cpp  ImageProcess.h  KeyPointsType.h
src/odometry/: Algorithm.h  Backend.cpp  Backend.h  Camera.cpp  Camera.h  FeatsBase.h  FeatsSuperPoint.h  Feature.cpp  Feature.h  Frame.cpp  Frame.h  Frontend.cpp  Frontend.h  Map.cpp  Map.h  Mappoint.cpp  Mappoint.h  MathTypes.h  Odometry.cpp  Odometry.h  OdometryOptions.h  Viewer.cpp  Viewer.h  g2o_types.h
src/odometry/core/: FeatureTracker.cc  FeatureTracker.h  FeatureTrackerOptions.h  Manager.cc  Manager.h  ManagerOptions.h  SensorData.h
src/odometry/track/: TrackBase.cc  TrackBase.h  TrackDescriptor.cc  TrackKLT.cc  TrackKLT.h
src/onnx/: BaseOnnxRunner.h  LightGlueOrt.cpp  LightGlueOrt.h  SPGLEnd2EndORT.cpp  SPGLEnd2EndORT.h  SuperPointOrt.cpp  SuperPointOrt.h
src/xprimer/: CMakeLists.txt
src/xprimer/basic/: CVLambdaBody.h  CVYamlParse.h
src/xprimer/camera/: CamBase.cc  CamBase.h  CamFisheye.h  CamOmni.h  CamPinhole.cc  CamPinhole.h  JsonHelper.h  YamlHelper.h
src/xprimer/logger/: Print.cc  Print.h
test/: CMakeLists.txt  EurocDataset.h  run_euroc.cc  test_config.cpp  test_kitti.cpp  test_lightglue.cpp  test_lightglue_end.cpp
